# misosoup

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  index.md  setup.cfg  setup.py  tox.ini
docs/: Gemfile  _config.yml  index.markdown
example/: OUTPUT_example.yaml  media.yaml  medium_MBM_no_co2_hco3.yaml  output.yaml
example/strains/: I2R16.xml  I3M07.xml
examples/auxotrophs/: medium.yaml  output.yaml
examples/marine/strains/: A1R12.xml  I2R16.xml  I3M07.xml
misolib/: analysis.py  common.py  getters.py  load.py  readwrite.py  solve.py  validate.py
misosoup/: __init__.py  main.py  utilities.py
misosoup/examples/: media_mbm_no_co2_hco3.yaml
misosoup/examples/strains/: A1R12.xml
misosoup/reframed/: gurobi_env_solver.py  layered_community.py
scripts/: filter_soup  misosoup  pickmodels  select_ingredients  taste_soup
tests/data/: medium.yaml
tests/integration/: test_filter.py  test_integration.py  test_misosoup.py  test_taste.py
tests/integration/data/: invalid_solution.yaml  valid_solution.yaml
tests/unit/: test_analysis.py  test_validate.py
workflows/: Snakefile  config.yaml
