[metadata]
name = misosoup
version = 1.0.0
author = Nicolas Ochsner
author_email = nicolas.ochsner@env.ethz.ch
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/misosoup
license = MIT

[options]
python_requires = >=3.7, < 3.10
packages =
    misosoup
    misosoup.library
    misosoup.reframed
install_requires =
    reframed >= 1.2.1
    gurobipy
    pyyaml
    pandas

[options.extras_require]
dev = pytest

[options.entry_points]
console_scripts =
    misosoup = misosoup.main:entry
    taste_soup = misosoup.utilities:taste_soup
    filter_soup = misosoup.utilities:filter_soup
    select_ingredients = misosoup.utilities:select_ingredients

[tox:tox]
envlist = py37,py38,py39
isolated_build = True

[testenv]
passenv = GRB_LICENSE_FILE
commands =
    pip install .[dev]
    pytest tests

