[metadata]
name = misosoup
version = 2.3.1
author = Nicolas Ochsner
author_email = nicolas.ochsner@env.ethz.ch
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/misosoup
license = MIT

[options]
python_requires = >=3.9
packages =
    misosoup
    misosoup.library
    misosoup.reframed
include_package_data = True
install_requires =
    reframed >= 1.6.0
    scipy
    gurobipy
    pyyaml >= 6.0
    pandas
    pyarrow

[options.extras_require]
dev =
    pylint
    pytest
    tox
    black

[options.entry_points]
console_scripts =
    misosoup = misosoup.main:entry
    taste_soup = misosoup.utilities:taste_soup
    filter_soup = misosoup.utilities:filter_soup
    select_ingredients = misosoup.utilities:select_ingredients

[tox:tox]
envlist = py310,py311,py312
isolated_build = True

[testenv]
passenv = GRB_LICENSE_FILE
commands =
    pip install .[dev]
    pytest tests
